Lil HTML fix...

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hive Tracker</title>
+	<title>SensiCoin</title>
 </head>
 <script type="text/javascript" src="script.js"></script>
 <body>
